k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: usuai-letsencrypt-dns01
        kubernetes.io/ingress.class: nginx
        kubernetes.io/tls-acme: "true"
    name: xautoml
spec:
    rules:
        -   host: xautoml.dev.ai.usu.com
            http:
                paths:
                    -   backend:
                            service:
                                name: xautoml
                                port:
                                    number: 8888
                        path: /
                        pathType: ImplementationSpecific
    tls:
        -   hosts:
                - xautoml.dev.ai.usu.com
            secretName: xautoml-tls
